<resources>

    <!-- Tabs  -->
    <string name="app_name">MoodTracker</string>
    <string name="title_home">Log</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_more">More</string>

    <string name="add_entry">add entry</string>
    <string name="attached_image">attached_image</string>
    <string name="todo">TODO</string>
    <string name="your_main_reason">Your main reason?</string>

    <!-- moods descriptions  -->
    <string name="depressed">Depressed</string>
    <string name="dysthymia">Dysthymia</string>
    <string name="sad">Sad</string>
    <string name="neutral">Neutral</string>
    <string name="happy">Happy</string>
    <string name="energetic">Energetic</string>
    <string name="hyperactive">Hyperactive</string>

    <!-- mood used in analysis and calendar  -->
    <string name="normal">Normal</string>


    <!-- groups and analysis -->
    <string name="_318_entries">318 entries</string>
    <string name="john_doe">John Doe</string>
    <string name="notifications">Notifications</string>
    <string name="change_colors">Change colors</string>
    <string name="edit_reasons">Edit reasons</string>
    <string name="groups">Groups</string>
    <string name="members">Members</string>
    <string name="family">Family</string>
    <string name="doctor">Doctor</string>
    <string name="close_friends">Close friends</string>
    <string name="friends">Friends</string>
    <string name="other">Other</string>
    <string name="dark_mode">Dark mode</string>
    <string name="connections">Connections</string>
    <string name="ava_n">Ava N.</string>
    <string name="camilo_o">Camilo O.</string>
    <string name="derek_m">Derek M.</string>
    <string name="jack_u">Jack U.</string>
    <string name="_24_more">+24 More</string>
    <string name="average_daily_mood_calendar">Average daily mood (calendar)</string>
    <string name="diary_moods_calendar">Diary moods (calendar)</string>
    <string name="mood_reports">Mood reports</string>
    <string name="issues_reports">Issues reports</string>
    <string name="sharing_time_interval">Sharing time interval</string>
    <string name="june_1_2022_june_30_2022">June 1, 2022 - June 30, 2022</string>
    <string name="derek_mac">Derek Mac</string>
    <string name="san_francisco_ca">San Francisco, CA</string>
    <string name="_123_456_789_234">+123 456 789 234</string>
    <string name="derek_mac_gmail_com">derek.mac@gmail.com</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="adobe_xd_message">Adobe XD Message</string>
    <string name="haifa_nato">Haifa Nato</string>
    <string name="jack_uke">Jack Uke</string>
    <string name="camilo_odyllo">Camilo Odyllo</string>
    <string name="ava_nathan">Ava Nathan</string>
    <string name="layla_florian">Layla Florian</string>
    <string name="liah_kaylee">Liah Kaylee</string>
    <string name="pending_requests">Pending requests</string>
    <string name="aaryan_kale">Aaryan Kale</string>
    <string name="badr_jacob">Badr Jacob</string>
    <string name="adriana_montana">Adriana Montana</string>
    <string name="blair_florian">Blair Florian</string>
    <string name="bruce_spears">Bruce Spears</string>
    <string name="braxton_oliver">Braxton Oliver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="average_mood">Average mood</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="robert_thomas">Robert Thomas</string>
    <string name="nicholas_dallas">Nicholas Dallas</string>
    <string name="andrew_kaiden">Andrew Kaiden</string>
    <string name="brandon_elias">Brandon Elias</string>
    <string name="emma_qing">Emma Qing</string>
    <string name="grace_hudson">Grace Hudson</string>
    <string name="yosef_trevor">Yosef Trevor</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="the_log_is_empty">The log is empty!</string>


</resources>