<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button3"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/medical_bag"
            android:drawableEnd="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/doctor"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/button4"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/home_outline"
            android:drawableEnd="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/family"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

        <Button
            android:id="@+id/button5"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/handshake"
            android:drawableEnd="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/close_friends"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

        <Button
            android:id="@+id/button6"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/account_group_outline"
            android:drawableEnd="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/friends"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

        <Button
            android:id="@+id/button7"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/pencil"
            android:drawableEnd="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>