<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button3"
            android:onClick="doctor"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/medical_bag"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/doctor"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/button4"
            android:onClick="family"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/home_outline"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/family"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

        <Button
            android:id="@+id/button5"
            android:onClick="close_friends"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/handshake"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/close_friends"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

        <Button
            android:id="@+id/button6"
            android:onClick="friends"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/account_group_outline"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/friends"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

        <Button
            android:id="@+id/button7"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/pencil"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

    </LinearLayout>
</LinearLayout>