<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="9dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="63dp"
                android:layout_height="75dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:srcCompat="@drawable/images" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/john_doe"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    android:textStyle="bold"  />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/_318_entries"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="start|center_vertical"
                android:text="@string/dark_mode"
                android:textColor="@color/surface_disabled"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/Primary_light" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="365dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:allowClickWhenDisabled="false" />

        </FrameLayout>


        <Button
            android:id="@+id/connections"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/transit_connection_variant"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:onClick="connections"
            android:text="@string/connections"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

        <Button
            android:id="@+id/groups"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/account_group"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:onClick="groups"
            android:text="@string/groups"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"
            tools:ignore="OnClick,UsingOnClickInXml" />

        <Button
            android:id="@+id/edit_reasons"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/help_circle"
            android:gravity="start|center_vertical"
            android:text="@string/edit_reasons"
            android:textColor="@color/surface_disabled"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

        <Button
            android:id="@+id/notifications"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/forum"
            android:gravity="start|center_vertical"
            android:text="@string/notifications"
            android:textColor="@color/surface_disabled"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

        <Button
            android:id="@+id/change_colors"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/palette"
            android:gravity="start|center_vertical"
            android:text="@string/change_colors"
            android:textColor="@color/surface_disabled"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

    </LinearLayout>


</ScrollView>