<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.CalendarFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/average_mood"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <org.naishadhparmar.zcustomcalendar.CustomCalendar
        android:id="@+id/custom_calendar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/label_depressed"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@color/calendar_depressed" />

            <TextView
                android:id="@+id/depressed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/depressed"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/label_sad"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@color/calendar_dysthymia" />

            <TextView
                android:id="@+id/sad_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/dysthymia"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/label_neutral"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@color/calendar_neutral" />

            <TextView
                android:id="@+id/neutral_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/neutral"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/label_happy"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@color/calendar_energetic" />

            <TextView
                android:id="@+id/happy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/energetic"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <View
                android:id="@+id/label_hyperactive"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@color/calendar_hyperactive" />

            <TextView
                android:id="@+id/hyperactive_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/hyperactive"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>
