<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/doctor"
            android:onClick="doctor"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/medical_bag"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/doctor"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/family"
            android:onClick="family"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/home_outline"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/family"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

        <Button
            android:id="@+id/close_friends"
            android:onClick="close_friends"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/handshake"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/close_friends"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light" />

        <Button
            android:id="@+id/friends"
            android:onClick="friends"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/account_group_outline"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/friends"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

        <Button

            android:id="@+id/other"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/pencil"
            android:drawableRight="@drawable/chevron_right"
            android:gravity="start|center_vertical"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>
        <Button
            android:id="@+id/new_group"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/pencil"
            android:drawableRight="@drawable/chevron_right"
            android:visibility="invisible"
            android:gravity="start|center_vertical"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/Primary_light"/>

        <LinearLayout
            android:id="@+id/linear_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="horizontal"
            android:visibility="invisible">



            <EditText
                android:id="@+id/edit_new"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="Enter name"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/add_new"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Add"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>